Fix vertical overflow on metadata edit form dialog: part deux (#1816)
* Fix display overflow on metadata edit form dialog

* More fixes to books in dialog mode

--- a/booklore-ui/src/app/features/metadata/component/book-metadata-center/metadata-editor/metadata-editor.component.scss
+++ b/booklore-ui/src/app/features/metadata/component/book-metadata-center/metadata-editor/metadata-editor.component.scss
@@ -19,7 +19,19 @@
 }
 
 ::ng-deep .p-autocomplete-input-chip {
-  width: 7rem;
+  width: 2rem;
+}
+
+::ng-deep .p-autocomplete-clearable ul {
+  padding-inline-end: 2rem !important;
+}
+
+::ng-deep .p-autocomplete-clearable .p-autocomplete-clear-icon {
+  right: 0px;
+  margin-top: -1rem;
+  width: 2rem;
+  height: 2rem;
+  padding: 0.5rem;
 }
 
 ::ng-deep .withbutton input,
